@@ -89,6 +89,7 @@ sub MY::postamble {
     require SPVM::Builder::Util::API;
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_precompile('Sys');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Sys::IO');
+    $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Sys::Windows');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Sys::IO::Windows');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Sys::IO::Constant');
     $make_rule .= SPVM::Builder::Util::API::create_make_rule_native('Sys::IO::FileStream');
