@@ -813,20 +813,29 @@ class Sys {
   
   static method l : int ($file : string) {
     
-    my $ok = 0;
-    
-    unless ($file) {
-      die "\$file must be defined.";
+    if (Sys::OS->is_windows) {
+      my $ok = 0;
+      
+      eval { $ok = Sys::IO::Windows->is_symlink($file); }
+      
+      return $ok;
     }
-    
-    my $stat = (Sys::IO::Stat)undef;
-    eval { $stat = Sys->lstat($file); }
-    
-    unless ($@) {
-      $ok = $stat->l;
+    else {
+      my $ok = 0;
+      
+      unless ($file) {
+        die "\$file must be defined.";
+      }
+      
+      my $stat = (Sys::IO::Stat)undef;
+      eval { $stat = Sys->lstat($file); }
+      
+      unless ($@) {
+        $ok = $stat->l;
+      }
+      
+      return $ok;
     }
-    
-    return $ok;
   }
   
   static method o : int ($file : string) {
