@@ -16,4 +16,6 @@ class Sys::IO::Windows {
   
   native static method realpath : mutable string ($path : string, $resolved_path : mutable string);
   
+  native static method is_symlink : int ($path : string);
+  
 }
